# optee-secure-image-signing

./: README.md
save_pic/: CMakeLists.txt
save_pic/host/: Makefile  verify_signature.h
save_pic/ta/: Makefile  save_pic_ta.c
